# VulkanEngine

./: .gitignore  AndroidVR.sln  AndroidVR.vcxproj  CMakeLists.txt  VulkanEngine.sln  VulkanEngine.vcxproj  VulkanEngine.vcxproj.filters
Doc/: VulkanEngine.doxygen
Include/: Actor.h  Application.h  Buffer.h  BufferView.h  BuildOptions.h  Camera.h  CommandBuffer.h  CommandPool.h  Core.h  Device.h  Engine.h  Framebuffer.h  Image.h  ImageView.h  InputManager.h  Instance.h  Memory.h  Object.h  PhysicalDevice.h  Platform.h  Primitive.h  Queue.h  RenderPass.h  Swapchain.h  VarArgs.h  VulkanConfig.h  VulkanCore.h  VulkanMisc.h  Window.h  World.h
Include/Rendering/: Cube.h  RenderComponent.h  Renderer.h  ShaderTools.h  Shaders.h  Shape.h  Window.cpp  Window.h  Windows_old.h
Include/Tools/: DebugTools.h  Logger.h
Include/Utils/: DebugTools.h  FileManager.h  LogTypes.h  Logger.h  Math.h
Source/: Actor.cpp  Application.cpp  Buffer.cpp  BufferView.cpp  Camera.cpp  CommandBuffer.cpp  CommandPool.cpp  Device.cpp  Engine.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  InputManager.cpp  Instance.cpp  Memory.cpp  Object.cpp  PhysicalDevice.cpp  Primitive.cpp  Queue.cpp  RenderPass.cpp  Source.cpp  Swapchain.cpp  VulkanConfig.cpp  VulkanCore.cpp  Window.cpp  World.cpp
Source/Rendering/: Cube.cpp  RenderComponent.cpp  Renderer.cpp  ShaderTools.cpp  Shape.cpp  Window.cpp  Windows_old.cpp
Source/Tools/: DebugTools.cpp  Logger.cpp
Source/Utils/: DebugTools.cpp  FileManager.cpp  Logger.cpp  Math.cpp
Templates/: VulkanEngineClassHeader.h  VulkanEngineClassSource.cpp
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: app.cpp  native-lib.cpp
android/app/src/main/java/com/pandeiros/app/: MainActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
android/utils/: AndroidCore.h  AndroidUtils.cpp  AndroidUtils.h  CMakeLists.txt
android/vulkan-app/: CMakeLists - Copy.txt  CMakeLists.txt  CMakeLists_AppOnly.txt  build.gradle
android/vulkan-app/src/main/: AndroidManifest.xml
android/vulkan-app/src/main/cpp/: vulkan-app.cpp
android/vulkan-app/src/main/cpp/classes/: AndroidApplication.cpp  AndroidApplication.h
android/vulkan-app/src/main/java/com/pandeiros/vulkanapp/: VulkanAppActivity.java
android/vulkan-app/src/main/res/values/: strings.xml
tests/: TestApplication.cpp  TestApplication.h
